--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <h2>Добавить новое вычисление</h2>
+<p>Введите математическое выражение из целых чисел и операндов "+-*/()". <br> Например "66 / 33 + 2 * ( 100 - 80 )".</p>
 <form method="post">
   {% csrf_token %}
+  {{ form.non_field_errors }}
   {{ form.as_p }}
   <input type="submit" value="Вычислить и сохранить">
 </form>
