--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <h2>Добавить новое вычисление</h2>
-<p>Введите математическое выражение из целых чисел и операндов "+-*/()". <br> Например "66 / 33 + 2 * ( 100 - 80 )".</p>
+<p>Введите математическое выражение из чисел и операндов "+-*/()". <br> Например "66/33+2*(100-80)".</p>
 <form method="post">
   {% csrf_token %}
   {{ form.non_field_errors }}
